Fixed footer overlap, added another image in ProjectAdd, fixed textarea css in ProjectAdd

--- a/src/components/ConsoleSideMenu/ConsoleSideMenu.module.css
+++ b/src/components/ConsoleSideMenu/ConsoleSideMenu.module.css
@@ -8,7 +8,7 @@
   .Content {
     flex-direction: column;
     width: 10vw;
-    min-height: 100%;
+    min-height: 90%;
     border-right: 2px solid black;
     padding-top: 30px;
   }
