--- a/src/components/ProjectAdd/ProjectAdd.module.css
+++ b/src/components/ProjectAdd/ProjectAdd.module.css
@@ -25,13 +25,24 @@ input[type="text"], h1 {
   text-align: center;
 }
 
+input[type="file"] {
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 200px;
+  height: 200px;
+}
+
+
 .Content textarea {
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
+  height: 100px;
   font-size: 26px;
   font-family: sans-serif;
+  resize: none;
 }
 
 @media(max-width: 1250px) {
